--- a/Chess/Clecture/Clecture.vcxproj.filters
+++ b/Chess/Clecture/Clecture.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="소스.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Header.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Drawing.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
