--- a/Chess/Chess/Chess.vcxproj.filters
+++ b/Chess/Chess/Chess.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClCompile Include="Header.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Serverconection.h">
+      <Filter>헤더 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Serverconnection.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
