--- a/Socket/.vscode/settings.json
+++ b/Socket/.vscode/settings.json
@@ -11,6 +11,7 @@
         "streambuf": "cpp",
         "exception": "cpp",
         "iosfwd": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "cstdio": "cpp"
     }
 }
